fix jdk